Instructions for static forced

--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@ arrow keys (&#8678; &#8680;) which one is first at the center.</p>
 </div>
 </div>
 
+<div class="instruction" id="forcedstaticinstruction">
+<div>
+<h1>Select the closest object</h1>
+<p>Objects appear to left and right of the centerline and are visible for a moment. Select with
+arrow keys (&#8678; &#8680;) which one is closer to the center.</p>
+<p>Right answer gives 100 points, wrong answer -200 points.</p>
+<p>Press any key to continue.</p>
+
+<h1>Valitse lähin kohde kohde</h1>
+<p>Kohteet ilmestyvät vasemmalla ja oikealla keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
+nuolinäppäimillä (&#8678; &#8680;) kumpi kohde on lähempänä keskilinjaa</p>
+<p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+</div>
+</div>
+
 
 <div id="startscreen">
 	<form onsubmit="launch_game(); return false;">
@@ -1046,6 +1063,7 @@ start_game = ->
 
 
 start_static_game = ->
+	await show_instruction "forcedstaticinstruction"
 	for i in [0...100]
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
