--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ arrow keys (&#8678; &#8680;) which one is closer to the center.</p>
 <p>Right answer gives 100 points, wrong answer -200 points.</p>
 <p>Press any key to continue.</p>
 
-<h1>Valitse lähin kohde kohde</h1>
+<h1>Valitse lähin kohde</h1>
 <p>Kohteet ilmestyvät vasemmalla ja oikealla keskilinjaa. Ne ovat näkyvissä vain hetken. Valitse 
 nuolinäppäimillä (&#8678; &#8680;) kumpi kohde on lähempänä keskilinjaa</p>
 <p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
