--- a/index.html
+++ b/index.html
@@ -290,6 +290,14 @@ new_object = ->
 	scene.add object
 	return object
 
+new_mask = ->
+	geometry = new THREE.BoxGeometry(3, 0.5, 1)
+	material = new THREE.MeshBasicMaterial color: 0xffffff
+	mask = new THREE.Mesh geometry, material
+	scene.add mask
+	return mask
+
+
 prev_time = undefined
 events_seen = []
 document.body.addEventListener("keydown", (ev) -> events_seen.push(ev))
@@ -323,9 +331,20 @@ scene.add line
 
 left = new_object()
 right = new_object()
-
 left.position.x = -100
 right.position.x = 100
+
+
+left1 = new_object()
+right1 = new_object()
+
+left1.position.x = -100
+right1.position.x = 100
+
+
+mask = new_mask()
+mask.position.y = -100
+
 
 total_score = 0
 n_trials = 0
@@ -336,6 +355,7 @@ update_score = (score) ->
 
 display_trial_score = (score) -> 
 	document.getElementById("trialscore").innerHTML = Math.round(score*100)
+
 
 get_speeds = ->
 
@@ -364,6 +384,8 @@ get_speeds = ->
 	#	left_speed = (Math.random()*0.15 + 0.5)
 	#	right_speed = -(Math.random()*0.15 + 0.5)
 	[left_speed, right_speed]
+
+
 
 trial = ->
 	trialtype = 'base'
@@ -957,6 +979,297 @@ trial_flash_forced_random_startloc = ->
 	
 		render()
 
+trial_flash_forced_random_startloc_masked = ->
+	trialtype = 'flash_forced'
+	answertime = 0
+	mask.position.y=100
+
+	left.position.x = -1 + Math.random()*0.2
+	right.position.x = 1 - Math.random()*0.2
+	
+	left.material.color.setHex 0xffffff
+	right.material.color.setHex 0xffffff
+
+	[left_speed, right_speed] = get_speeds()
+	
+	
+	left_ttc = Math.abs (left.position.x)/left_speed
+	right_ttc = Math.abs (right.position.x)/right_speed
+	
+	ttc_diff = right_ttc - left_ttc
+	###	
+	ttc_diff = Math.random() - 0.5
+	right_delay = ttc_diff + left_ttc - right_ttc
+	
+	if right_delay > 0 
+		right.position.x += (right_delay * -right_speed)
+		right_ttc = Math.abs right.position.x / right_speed
+	else
+		left.position.x += right_delay * left_speed
+		left_ttc = Math.abs left.position.x / left_speed
+	###
+	
+	min_ttc = Math.min left_ttc, right_ttc
+	disappearlocation = Math.random()*0.5 + 0.2
+
+	side_selected = 0
+	score = undefined
+
+	t = undefined
+	t0 = undefined
+
+	trialinfo =
+		type: trialtype
+		v0: left_speed
+		v1: right_speed
+		x0: left.position.x
+		x1: right.position.x
+		ttcdiff: ttc_diff
+		minttc: min_ttc
+		disappear: disappearlocation
+
+	
+
+
+	trialdone = 0
+	
+	reset_events()
+	while true
+		[time, events] = await next_frame()
+		if not t?
+			t = time
+			t0 = time
+		dt = time - t
+		t = time
+		for event in events
+			# Don't accept keypress unless both objects are visible
+			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
+			if (not answertime) or (mask.position.y == 0)
+				break
+			if score?
+				break
+			if event.key == "ArrowLeft" or event.touches?[0].clientX < event.target.clientWidth/2
+				side_selected = -1
+				left.material.color.setHex 0xff00ff
+				trialdone = 1
+			else if event.key == "ArrowRight" or event.touches?[0].clientX > event.target.clientWidth/2
+				side_selected = 1
+				right.material.color.setHex 0xff00ff
+				trialdone = 1
+			else
+				break
+			#score = (min_ttc - (t - t0))/min_ttc
+			score = 1
+			if side_selected == Math.sign(ttc_diff)
+				score *= -2
+				trialinfo.correct = 0
+			else if side_selected == -Math.sign(ttc_diff)
+				trialinfo.correct = 1
+			trialinfo.reply_ttc_time = min_ttc - (t-t0)
+			trialinfo.reply_time = (t-t0)
+
+			update_score(score)
+			trialinfo.score = score
+			trialinfo.n_trials = n_trials
+
+		
+		if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation 
+			left.position.x = -100
+			right.position.x = 100
+			left_speed = 0
+			right_speed = 0
+			mask.position.y = 0	
+			setTimeout (-> mask.position.y=100 ), 300
+
+			answertime = 1
+			document.getElementById("answerprompt").innerHTML = 'which one first at the center <br>  &#8678; press an arrow key &#8680; '
+			
+		else
+			left.position.x += left_speed * dt
+			right.position.x += right_speed * dt
+		
+
+
+		if left.position.x > 0
+			left.position.x = 0
+			trialdone = 1
+		if right.position.x < 0
+			right.position.x = 0
+			trialdone = 1
+			
+		if trialdone
+			if not score?
+				score = 0
+				update_score(score)
+				trialinfo.score = score
+				trialinfo.n_trials = n_trials
+			display_trial_score(score)
+			logger(trialinfo)
+			return
+		
+	
+		render()
+
+trial_flash_forced_masked_two_and_one = ->
+	trialtype = 'flash_forced_masked_two_and_one'
+	answertime = 0
+	mask.position.y=100
+
+	left.position.x = -1   
+	right.position.x = 1 
+	
+	left.material.color.setHex 0xffffff
+	right.material.color.setHex 0xffffff
+
+	[left_speed, right_speed] = get_speeds()
+
+		
+	left_ttc = Math.abs (left.position.x)/left_speed
+	right_ttc = Math.abs (right.position.x)/right_speed
+	
+	ttc_diff = right_ttc - left_ttc
+
+	# extra balls: add a ball to random side 
+	left.position.y = 0
+	right.position.y = 0
+
+	if Math.random() < 0.5
+	# add to left
+		left1_speed = left_speed + Math.random()*0.4
+		left1.position.x = -1
+		if Math.random() < 0.5
+			left1.position.y = 0.1
+			left.position.y = -0.1
+		else
+			left1.position.y = -0.1
+			left.position.y = 0.1
+	else
+		right1_speed = right_speed - Math.random()*0.4
+		right1.position.x = 1
+		if Math.random() < 0.5
+			right1.position.y = 0.1
+			right.position.y = -0.1
+		else
+			right1.position.y = -0.1
+			right.position.y = 0.1
+
+	
+	min_ttc = Math.min left_ttc, right_ttc
+	#disappearlocation = Math.random()*0.5 + 0.2
+	disappeartime = Math.random()*0.3+0.3
+	side_selected = 0
+	score = undefined
+
+	t = undefined
+	t0 = undefined
+
+	trialinfo =
+		type: trialtype
+		v0: left_speed
+		v1: right_speed
+		x0: left.position.x
+		x1: right.position.x
+		v2: left1_speed
+		x2: left1.position.x
+		v3: right1_speed
+		x3: right1.position.x
+		y2: left1.position.y
+		y3: right1.position.y
+	
+		ttcdiff: ttc_diff
+		minttc: min_ttc
+		disappear: disappeartime
+
+	
+
+
+	trialdone = 0
+	console.log "here"
+	console.log trialinfo
+	reset_events()
+	while true
+		[time, events] = await next_frame()
+		if not t?
+			t = time
+			t0 = time
+		dt = time - t
+		t = time
+		for event in events
+			# Don't accept keypress unless both objects are visible
+			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
+			if (not answertime) or (mask.position.y == 0)
+				break
+			if score?
+				break
+			if event.key == "ArrowLeft" or event.touches?[0].clientX < event.target.clientWidth/2
+				side_selected = -1
+				left.material.color.setHex 0xff00ff
+				trialdone = 1
+			else if event.key == "ArrowRight" or event.touches?[0].clientX > event.target.clientWidth/2
+				side_selected = 1
+				right.material.color.setHex 0xff00ff
+				trialdone = 1
+			else
+				break
+			#score = (min_ttc - (t - t0))/min_ttc
+			score = 1
+			if side_selected == Math.sign(ttc_diff)
+				score *= -2
+				trialinfo.correct = 0
+			else if side_selected == -Math.sign(ttc_diff)
+				trialinfo.correct = 1
+			trialinfo.reply_ttc_time = min_ttc - (t-t0)
+			trialinfo.reply_time = (t-t0)
+
+			update_score(score)
+			trialinfo.score = score
+			trialinfo.n_trials = n_trials
+
+		
+		#if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation
+		if ((t-t0) > disappeartime) and (not answertime)
+			left.position.x = -100
+			right.position.x = 100
+			left1.position.x = -100
+			right1.position.x = 100
+			left_speed = 0
+			right_speed = 0
+			left1_speed = 0
+			right1_speed = 0
+			mask.position.y = 0	
+			setTimeout (-> mask.position.y=100 ), 300
+
+			answertime = 1
+			document.getElementById("answerprompt").innerHTML = 'which one first at the center <br>  &#8678; press an arrow key &#8680; '
+			
+		else
+			left.position.x += left_speed * dt
+			right.position.x += right_speed * dt
+			left1.position.x += left1_speed * dt
+			right1.position.x += right1_speed * dt
+					
+
+
+		if left.position.x > 0
+			left.position.x = 0
+			trialdone = 1
+		if right.position.x < 0
+			right.position.x = 0
+			trialdone = 1
+			
+		if trialdone
+			if not score?
+				score = 0
+				update_score(score)
+				trialinfo.score = score
+				trialinfo.n_trials = n_trials
+			display_trial_score(score)
+			logger(trialinfo)
+			return
+		
+	
+		render()
+
 
 show_instruction = (id) ->
 	el = document.getElementById id
@@ -978,10 +1291,13 @@ start_game = ->
 			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
 			document.getElementById("trialscore").innerHTML = ""
 			document.getElementById("answerprompt").innerHTML = ""
-			await trial()
+			#await trial()
 			#await trial_flash_forced()
 			#await trial_flash_nonforced()
 			#await trial_flash_forced_random_startloc()
+			await trial_flash_forced_masked_two_and_one()
+
+			#await trial_flash_forced_random_startloc_masked()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
