--- a/index.html
+++ b/index.html
@@ -104,6 +104,42 @@ body > canvas {
 <div id="answerprompt">
 </div>
 
+<div class="instruction" id="forced_two_and_one_instruction">
+<div>
+<h1>TOPELI 2-1: Select the critical object</h1>
+<p>Objects appear from left and right, they approach the center, and are visible for a moment. There may be more than one
+object on one side.  Select with
+arrow keys (&#8678; &#8680;) which side has the fastest object. i.e., from which side an object would reach the center line first. </p>
+<p>Right answer gives 100 points, wrong answer -200 points.</p>
+<p>Press any key to continue.</p>
+
+<h1>TOPELI 2-1: Valitse kriittinen kohde</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Yhdellä puolella voi olla useampia kohteita.
+ Valitse nuolinäppäimillä (&#8678; &#8680;) kummalla puolella on nopein kohde, eli kummalta puolelta ruutua kohde saavuttaisi ruudun keskilinjan ensin.</p>
+<p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+</div>
+</div>
+
+<div class="instruction" id="forced_two_and_one_instruction_practice">
+<div>
+<h1>TOPELI 2-1: Select the critical object,  practice rounds</h1>
+<p>Objects appear from left and right, they approach the center, and are visible for a moment. There may be more than one
+object on one side.  Select with
+arrow keys (&#8678; &#8680;) which side has the fastest object. i.e., from which side an object would reach the center line first. </p>
+<p>Right answer gives 100 points, wrong answer -200 points.</p>
+<p>Press any key to continue.</p>
+
+<h1>TOPELI 2-1: Valitse kriittinen kohde, harjoituskierrokset</h1>
+<p>Kohteet tulevat vasemmalta ja oikealta ja lähestyvät keskilinjaa. Ne ovat näkyvissä vain hetken. Yhdellä puolella voi olla useampia kohteita.
+ Valitse nuolinäppäimillä (&#8678; &#8680;) kummalla puolella on nopein kohde, eli kummalta puolelta ruutua kohde saavuttaisi ruudun keskilinjan ensin.</p>
+<p>Oikeasta vastauksesta 100 pistettä, Väärästä -200 pistettä.</p>
+<p>Paina jotain näppäintä aloittaaksesi.</p>
+
+</div>
+</div>
+
 <div class="instruction" id="forcedinstruction">
 <div>
 <h1>TOPELI 2: Select the critical object</h1>
@@ -1110,6 +1146,141 @@ trial_flash_forced_random_startloc_masked = ->
 	
 		render()
 
+trial_flash_forced_masked_one_and_one = ->
+	trialtype = 'flash_forced_masked_one_and_one'
+	answertime = 0
+	mask.position.y=100
+
+	left.position.x = -1   
+	right.position.x = 1 
+	left.position.y = 0
+	right.position.y = 0
+	
+	left.material.color.setHex 0xffffff
+	right.material.color.setHex 0xffffff
+
+	[left_speed, right_speed] = get_speeds()
+	
+	
+	left_ttc = Math.abs (left.position.x)/left_speed
+	right_ttc = Math.abs (right.position.x)/right_speed
+	
+	ttc_diff = right_ttc - left_ttc
+	###	
+	ttc_diff = Math.random() - 0.5
+	right_delay = ttc_diff + left_ttc - right_ttc
+	
+	if right_delay > 0 
+		right.position.x += (right_delay * -right_speed)
+		right_ttc = Math.abs right.position.x / right_speed
+	else
+		left.position.x += right_delay * left_speed
+		left_ttc = Math.abs left.position.x / left_speed
+	###
+	
+	min_ttc = Math.min left_ttc, right_ttc
+	#disappearlocation = Math.random()*0.5 + 0.2
+	disappeartime = Math.random()*0.4 + 0.4
+	side_selected = 0
+	score = undefined
+
+	t = undefined
+	t0 = undefined
+
+	trialinfo =
+		type: trialtype
+		v0: left_speed
+		v1: right_speed
+		x0: left.position.x
+		x1: right.position.x
+		ttcdiff: ttc_diff
+		minttc: min_ttc
+		disappear: disappeartime
+
+	
+
+
+	trialdone = 0
+	
+	reset_events()
+	while true
+		[time, events] = await next_frame()
+		if not t?
+			t = time
+			t0 = time
+		dt = time - t
+		t = time
+		for event in events
+			# Don't accept keypress unless both objects are visible
+			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
+			if (not answertime) or (mask.position.y == 0)
+				break
+			if score?
+				break
+			if event.key == "ArrowLeft" or event.touches?[0].clientX < event.target.clientWidth/2
+				side_selected = -1
+				left.material.color.setHex 0xff00ff
+				trialdone = 1
+			else if event.key == "ArrowRight" or event.touches?[0].clientX > event.target.clientWidth/2
+				side_selected = 1
+				right.material.color.setHex 0xff00ff
+				trialdone = 1
+			else
+				break
+			#score = (min_ttc - (t - t0))/min_ttc
+			score = 1
+			if side_selected == Math.sign(ttc_diff)
+				score *= -2
+				trialinfo.correct = 0
+			else if side_selected == -Math.sign(ttc_diff)
+				trialinfo.correct = 1
+			trialinfo.reply_ttc_time = min_ttc - (t-t0)
+			trialinfo.reply_time = (t-t0)
+
+			update_score(score)
+			trialinfo.score = score
+			trialinfo.n_trials = n_trials
+
+		
+		#if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation 
+		if ((t-t0) > disappeartime) and (not answertime)
+			left.position.x = -100
+			right.position.x = 100
+			left_speed = 0
+			right_speed = 0
+			mask.position.y = 0	
+			setTimeout (-> mask.position.y=100 ), 300
+
+			answertime = 1
+			document.getElementById("answerprompt").innerHTML = 'which side faster <br>  &#8678; press an arrow key &#8680; '
+			
+		else
+			left.position.x += left_speed * dt
+			right.position.x += right_speed * dt
+		
+
+
+		if left.position.x > 0
+			left.position.x = 0
+			trialdone = 1
+		if right.position.x < 0
+			right.position.x = 0
+			trialdone = 1
+			
+		if trialdone
+			if not score?
+				score = 0
+				update_score(score)
+				trialinfo.score = score
+				trialinfo.n_trials = n_trials
+			display_trial_score(score)
+			logger(trialinfo)
+			return
+		
+	
+		render()
+
+
 trial_flash_forced_masked_two_and_one = ->
 	trialtype = 'flash_forced_masked_two_and_one'
 	answertime = 0
@@ -1117,6 +1288,8 @@ trial_flash_forced_masked_two_and_one = ->
 
 	left.position.x = -1   
 	right.position.x = 1 
+	left.position.y = 0
+	right.position.y = 0
 	
 	left.material.color.setHex 0xffffff
 	right.material.color.setHex 0xffffff
@@ -1129,12 +1302,10 @@ trial_flash_forced_masked_two_and_one = ->
 	
 	ttc_diff = right_ttc - left_ttc
 
-	# extra balls: add a ball to random side 
-	left.position.y = 0
-	right.position.y = 0
+
 
 	if Math.random() < 0.5
-	# add to left
+	# add extra ball
 		left1_speed = left_speed - Math.random()*0.3
 		left1.position.x = -1
 		if Math.random() < 0.5
@@ -1180,12 +1351,8 @@ trial_flash_forced_masked_two_and_one = ->
 		minttc: min_ttc
 		disappear: disappeartime
 
-	
-
 
 	trialdone = 0
-	console.log "here"
-	console.log trialinfo
 	reset_events()
 	while true
 		[time, events] = await next_frame()
@@ -1240,7 +1407,7 @@ trial_flash_forced_masked_two_and_one = ->
 			setTimeout (-> mask.position.y=100 ), 300
 
 			answertime = 1
-			document.getElementById("answerprompt").innerHTML = 'which one first at the center <br>  &#8678; press an arrow key &#8680; '
+			document.getElementById("answerprompt").innerHTML = 'which side faster <br>  &#8678; press an arrow key &#8680; '
 			
 		else
 			left.position.x += left_speed * dt
@@ -1286,97 +1453,57 @@ start_game = ->
 	max_trials = 25
 	
 	for b in [0...max_blocks]
-		await show_instruction "trialinstruction_practice"
+		await show_instruction "forcedinstruction_practice"
 		for i in [0...max_trials]
 			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
 			document.getElementById("trialscore").innerHTML = ""
-			document.getElementById("answerprompt").innerHTML = ""
-			#await trial()
-			#await trial_flash_forced()
-			#await trial_flash_nonforced()
-			#await trial_flash_forced_random_startloc()
-			await trial_flash_forced_masked_two_and_one()
-
-			#await trial_flash_forced_random_startloc_masked()
+			document.getElementById("answerprompt").innerHTML = ""		
+			await trial_flash_forced_masked_one_and_one()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
 	
-		await show_instruction "forcedinstruction_practice"
+		await show_instruction "forced_two_and_one_instruction_practice"
 		for i in [0...max_trials]
 			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
 			document.getElementById("trialscore").innerHTML = ""
 			document.getElementById("answerprompt").innerHTML = ""
-			#await trial()
-			await trial_flash_forced()
-			#await trial_flash_nonforced()
+			await trial_flash_forced_masked_two_and_one()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
 		
-		await show_instruction "nonforcedinstruction_practice"
-		for i in [0...max_trials]
-			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
-			document.getElementById("trialscore").innerHTML = ""
-			document.getElementById("answerprompt").innerHTML = ""
-			#await trial()
-			#await trial_flash_forced()
-			await trial_flash_nonforced()
-			await new Promise (a) -> setTimeout a, 1000
-		document.getElementById("trial_n").innerHTML = ""
-		document.getElementById("trialscore").innerHTML = ""
-		document.getElementById("answerprompt").innerHTML = ""
-
-
 
 	total_score = 0
 		
 	max_blocks = 3
 	max_trials = 75
-	
-	for b in [0...max_blocks]
 
-		await show_instruction "trialinstruction"
-		for i in [0...max_trials]
-			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
-			document.getElementById("trialscore").innerHTML = ""
-			document.getElementById("answerprompt").innerHTML = ""
-			await trial()
-			#await trial_flash_forced()
-			#await trial_flash_nonforced()
-			await new Promise (a) -> setTimeout a, 1000
-		document.getElementById("trial_n").innerHTML = ""
-		document.getElementById("trialscore").innerHTML = ""
-		document.getElementById("answerprompt").innerHTML = ""
-	
+	for b in [0...max_blocks]
 		await show_instruction "forcedinstruction"
 		for i in [0...max_trials]
 			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
 			document.getElementById("trialscore").innerHTML = ""
-			document.getElementById("answerprompt").innerHTML = ""
-			#await trial()
-			await trial_flash_forced()
-			#await trial_flash_nonforced()
+			document.getElementById("answerprompt").innerHTML = ""		
+			await trial_flash_forced_masked_one_and_one()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
-		
-		await show_instruction "nonforcedinstruction"
+	
+		await show_instruction "forced_two_and_one_instruction"
 		for i in [0...max_trials]
 			document.getElementById("trial_n").innerHTML = "#{i+1} / #{max_trials}"
 			document.getElementById("trialscore").innerHTML = ""
 			document.getElementById("answerprompt").innerHTML = ""
-			#await trial()
-			#await trial_flash_forced()
-			await trial_flash_nonforced()
+			await trial_flash_forced_masked_two_and_one()
 			await new Promise (a) -> setTimeout a, 1000
 		document.getElementById("trial_n").innerHTML = ""
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
-
+			
 
 start_static_game = ->
 	await show_instruction "forcedstaticinstruction"
