--- a/index.html
+++ b/index.html
@@ -319,9 +319,70 @@ render = ->
 	camera.updateProjectionMatrix() # May be expensive
 	renderer.render scene, camera
 
+NoiseMaterial = new THREE.ShaderMaterial
+	transparent: true
+	uniforms:
+		color: new THREE.Uniform new THREE.Color()
+
+	vertexShader: """
+	varying vec2 vUv;
+	varying vec4 mvPosition;
+	varying vec3 local_position;
+	void main()
+	{
+		vUv = uv;
+		mvPosition = modelViewMatrix * vec4( position, 1.0 );
+		vec4 wPosition = modelMatrix * vec4(position, 1.0);
+		gl_Position = projectionMatrix * mvPosition;
+		local_position = position;
+	}
+	"""
+
+	fragmentShader: """
+	varying vec3 local_position;
+	varying vec2 vUv;
+	uniform vec3 color;
+	float rand(vec2 co){
+    		return fract(sin(dot(co, vec2(12.9898, 78.233))) * 43758.5453);
+	}
+	vec3 hsv2rgb(vec3 c)
+	{
+    		vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
+    		vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
+    		return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
+	}
+
+	vec3 rgb2hsv(vec3 c)
+	{
+	    vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
+	    vec4 p = mix(vec4(c.bg, K.wz), vec4(c.gb, K.xy), step(c.b, c.g));
+	    vec4 q = mix(vec4(p.xyw, c.r), vec4(c.r, p.yzx), step(p.x, c.r));
+
+	    float d = q.x - min(q.w, q.y);
+	    float e = 1.0e-10;
+	    return vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)), d / (q.x + e), q.x);
+	}
+
+	void main() {
+		//float value = rand(round(vUv*10.0));
+		vec2 pos = vec2(local_position.x, local_position.y);
+		float value = rand(round(pos*500.0)/500.0);
+		
+		vec3 hsv = rgb2hsv(color);
+		hsv.z = value;
+		gl_FragColor = vec4(hsv2rgb(hsv), 1.0);		
+	}
+	"""
+
+noise_material = ->
+	mat = NoiseMaterial.clone()
+	mat.color = mat.uniforms.color.value
+	return mat
+
 new_object = ->
-	geometry = new THREE.SphereGeometry(0.01, 32, 16)
-	material = new THREE.MeshBasicMaterial color: 0xffffff
+	geometry = new THREE.SphereGeometry(0.02, 32, 16)
+	#material = new THREE.MeshBasicMaterial color: 0xffffff
+	material = noise_material()
 	object = new THREE.Mesh geometry, material
 	scene.add object
 	return object
@@ -330,9 +391,17 @@ new_mask = ->
 	geometry = new THREE.BoxGeometry(3, 0.5, 1)
 	material = new THREE.MeshBasicMaterial color: 0xffffff
 	mask = new THREE.Mesh geometry, material
+	mask.position.z = -100
 	scene.add mask
 	return mask
 
+
+background = new THREE.Mesh(
+	new THREE.PlaneGeometry(2, 2),
+	noise_material()
+	)
+background.position.z = -10
+scene.add background
 
 prev_time = undefined
 events_seen = []
@@ -361,7 +430,9 @@ line = new THREE.Line(
 	new THREE.BufferGeometry().setFromPoints([
 		new THREE.Vector3(0, 1, 0),
 		new THREE.Vector3(0, -1, 0)
-		])
+		]),
+	new THREE.LineBasicMaterial
+		linewidth: 3
 	)
 scene.add line
 
