--- a/index.html
+++ b/index.html
@@ -378,9 +378,19 @@ NoiseMaterial = new THREE.ShaderMaterial
 	varying vec2 vUv;
 	uniform vec3 color;
 	uniform float seed;
-	float rand(vec2 co){
+	/*float rand(vec2 co){
     		return fract(sin(dot(co, vec2(12.9898, 78.233))) * 43758.5453);
+	}*/
+	highp float rand(vec2 co)
+	{
+	    highp float a = 12.9898;
+	    highp float b = 78.233;
+	    highp float c = 43758.5453;
+	    highp float dt= dot(co.xy ,vec2(a,b));
+	    highp float sn= mod(dt,3.14);
+	    return fract(sin(sn) * c);
 	}
+
 	vec3 hsv2rgb(vec3 c)
 	{
     		vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
@@ -401,7 +411,7 @@ NoiseMaterial = new THREE.ShaderMaterial
 
 	void main() {
 		//float value = rand(round(vUv*10.0));
-		vec2 pos = vec2(local_position.x + seed, local_position.y + seed);
+		vec2 pos = vec2(local_position.x + seed/10.0, local_position.y + seed/10.0);
 		float value = rand(round(pos*500.0)/500.0);
 		
 		vec3 hsv = rgb2hsv(color);
