Fix bug in object count initialization

--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@ draw_n_and_n = (n) ->
 			break
 		if nright == n
 			nleft += nextra
+			break
 		left = Math.random() < 0.5
 		if left
 			nleft += 1
